--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -199,7 +199,7 @@
         <a class="popup__link" >{{'Terms of Use' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
-        <span>{{'Already have an account\?' | translate}}</span>
+        <span>{{'Already have an account?' | translate}}</span>
         <a class="popup__link" (click)="openLogInMobile()">{{'Log in' | translate}}</a>
       </div>
 
@@ -220,7 +220,7 @@
       <h4 class="popup__subtitle" [innerHtml]="afterCaptchaMessage"></h4>
       <div class="popup__line"></div>
       <div class="popup__text--light">{{'If you haven\'t received the email, do the following:' | translate}}</div>
-      <div class="popup__text--light">{{'Check spam or other folders\.' | translate}} <br> {{'Set email address whitelist\.' | translate}} <a class="popup__link" href="">{{'How to set\?' | translate}}</a><br> {{'Check the mail client works normally\.' | translate}}</div>
+      <div class="popup__text--light">{{'Check spam or other folders.' | translate}} <br> {{'Set email address whitelist.' | translate}} <a class="popup__link" href="">{{'How to set?' | translate}}</a><br> {{'Check the mail client works normally.' | translate}}</div>
     </ng-template>
 
   </div>
