--- a/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
@@ -3,14 +3,14 @@
   <p>{{'Enterh the autentification code' | translate}}</p>
 </div>
 <div class="modal__row modal__row--mb24">
-  <p>{{'Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address\.' | translate}}</p>
+  <p>{{'Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.' | translate}}</p>
 </div>
 <div class="modal__row modal__row--mb32">
   <div class="wrap-input wrap-input--fix230">
     <input class="wrap-input__input" id="login-email" type="text" required="">
     <label class="wrap-input__label" for="">{{'Authentification code' | translate}}</label>
     <div class="wrap-input__line"></div>
-    <span class="wrap-input__message">{{'Incorrect code\.' | translate}}</span>
+    <span class="wrap-input__message">{{'Incorrect code.' | translate}}</span>
   </div>
 </div>
 <button class="btn btn--active btn--center " href="#">{{'Enable GA' | translate}}</button>
