--- a/src/app/popups/two-factor-popup/telegram/telegram-step-two/telegram-step-two.component.html
+++ b/src/app/popups/two-factor-popup/telegram/telegram-step-two/telegram-step-two.component.html
@@ -1,20 +1,20 @@
-<div class="title modal__title">Two-Factor authentication by telegram</div>
+<div class="title modal__title">{{'Two-Factor authentication by telegram' | translate}}</div>
 <div class="subtitle modal__subtitle">
-  <p>Plug in telegram bot</p>
+  <p>{{'Plug in telegram bot' | translate}}</p>
 </div>
 <div class="modal__row">
-  <p>Enter this code to telegram bot</p>
+  <p>{{'Enter this code to telegram bot' | translate}}</p>
 </div>
 <div class="modal__row">
   <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
 </div>
 <div class="modal__row modal__row--mb20">
-  <p>Click on button below after it</p>
+  <p>{{'Click on button below after it' | translate}}</p>
 </div>
-<button class="btn btn--active btn--center btn--mb32">Enable</button>
+<button class="btn btn--active btn--center btn--mb32">{{'Enable' | translate}}</button>
 <div class="note modal__note">
-  <div class="note__title">Please note:</div>
+  <div class="note__title">{{'Please note:' | translate}}</div>
   <ul class="note__list">
-    <li class="note__list-item">Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.</li>
+    <li class="note__list-item" translate>Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.</li>
   </ul>
 </div>
