--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -52,7 +52,7 @@
           </a>
         </li>
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/ {{ stepsSize  }}</div>
+      <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ {{ stepsSize  }}</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content" [ngSwitch]="provider">
