--- a/src/app/settings/email-notification/email-notification.component.html
+++ b/src/app/settings/email-notification/email-notification.component.html
@@ -1,5 +1,5 @@
 <div class="settings__content">
-  <h3 class="title settings__content-title">Email Notifications</h3>
+  <h3 class="title settings__content-title">{{'Email Notifications' | translate}}</h3>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
       <input type="checkbox" name=""
@@ -8,7 +8,7 @@
       >
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Input / output</span>
+    <span class="settings__toggler-text">{{'Input / output' | translate}}</span>
   </div>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
@@ -18,7 +18,7 @@
       >
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Orders</span>
+    <span class="settings__toggler-text">{{'Orders' | translate}}</span>
   </div>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
@@ -28,7 +28,7 @@
       >
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Account changes</span>
+    <span class="settings__toggler-text">{{'Account changes' | translate}}</span>
   </div>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
@@ -38,7 +38,7 @@
       >
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Notifications from administrators</span>
+    <span class="settings__toggler-text">{{'Notifications from administrators' | translate}}</span>
   </div>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
@@ -48,6 +48,6 @@
       >
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Other messages</span>
+    <span class="settings__toggler-text">{{'Other messages' | translate}}</span>
   </div>
 </div>
