--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,35 +2,35 @@
   <div class="settings">
     <div class="settings__sidebar">
       <div class="ppage-title settings__sidebar-title">
-        <h1 class="page-title__text">Settings </h1>
+        <h1 class="page-title__text">{{'Settings' | translate}} </h1>
       </div>
       <ul class="sidebar-menu">
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/two-factor-auth']">
-            Two-Factor Authentication
+            {{'Two-Factor Authentication' | translate}}
           </a>
         </li>
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/password']">
-            Password
+            {{'Password' | translate}}
           </a>
         </li>
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/session']">
-            Session Time
+            {{'Session Time' | translate}}
           </a>
         </li>
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/nickname']">
-            Add Nickname
+            {{'Add Nickname' | translate}}
           </a>
         </li>
         <!--<li class="sidebar-menu__item">-->
@@ -44,14 +44,14 @@
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/e-notification']">
-            Notifications
+            {{'Notifications' | translate}}
           </a>
         </li>
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/view']">
-            View
+            {{'View' | translate}}
           </a>
         </li>
       </ul>
