--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -1,17 +1,17 @@
 <div class="settings__content">
-  <h3 class="title settings__content-title">Two-Factor authentication</h3>
+  <h3 class="title settings__content-title">{{'Two-Factor authentication' | translate}}</h3>
   <div class="tfa__select-type">
-    <div class="subtitle settings__content-subtitle"> Log in, Withdrawal, Inner transfer</div>
+    <div class="subtitle settings__content-subtitle"> {{'Log in, Withdrawal, Inner transfer' | translate}}</div>
   </div>
   <table class="table tfa__table">
     <thead>
     <tr>
       <th class="table__cell-head" style="width:300px"></th>
-      <th class="table__cell-head" style="width:200px"><span>By Google</span></th>
+      <th class="table__cell-head" style="width:200px"><span>{{'By Google' | translate}}</span></th>
     </tr>
     </thead>
     <tr>
-      <td class="table__cell"><span class="tfa__method">Log in, Withdrawal, Inner transfer</span></td>
+      <td class="table__cell"><span class="tfa__method">{{'Log in, Withdrawal, Inner transfer' | translate}}</span></td>
       <td class="table__cell" style="text-align:center">
         <label class="toggler settings__toggler">
           <input type="checkbox"  [checked]="isGoogleTwoFaEnabled">
@@ -30,7 +30,7 @@
               <path d="M11 8.8V13.2H17.2238C16.3152 15.7608 13.8688 17.6 11 17.6C7.3612 17.6 4.4 14.6388 4.4 11C4.4 7.3612 7.3612 4.4 11 4.4C12.5774 4.4 14.0954 4.9654 15.2746 5.9928L18.1654 2.6752C16.1854 0.9504 13.6422 0 11 0C4.9346 0 0 4.9346 0 11C0 17.0654 4.9346 22 11 22C17.0654 22 22 17.0654 22 11V8.8H11Z"/>
             </svg>
           </span>
-          <span class="button__text">Google Authenticator</span>
+          <span class="button__text">{{'Google Authenticator' | translate}}</span>
         </button>
     <!--</div>-->
     <!--<div >-->
@@ -40,7 +40,7 @@
               <path d="M11 8.8V13.2H17.2238C16.3152 15.7608 13.8688 17.6 11 17.6C7.3612 17.6 4.4 14.6388 4.4 11C4.4 7.3612 7.3612 4.4 11 4.4C12.5774 4.4 14.0954 4.9654 15.2746 5.9928L18.1654 2.6752C16.1854 0.9504 13.6422 0 11 0C4.9346 0 0 4.9346 0 11C0 17.0654 4.9346 22 11 22C17.0654 22 22 17.0654 22 11V8.8H11Z"/>
             </svg>
           </span>
-        <span class="button__text">Disable Google 2FA</span>
+        <span class="button__text">{{'Disable Google 2FA' | translate}}</span>
       </button>
   </div>
 </div>
