--- a/src/app/static-pages/contacts/contacts.component.html
+++ b/src/app/static-pages/contacts/contacts.component.html
@@ -2,20 +2,20 @@
   <div class="static-pages">
     <div class="page-title">
       <h1 class="page-title__text">
-        Contacts & representatives
+        {{'Contacts & representatives' | translate}}
       </h1>
     </div>
-    <p class="static-pages__paragraph" style="max-width: 684px;">Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.
+    <p class="static-pages__paragraph" style="max-width: 684px;">{{'Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates' | translate}}.
     </p>
     <div class="contacts">
       <div class="contacts__info">
-        <p class="static-pages__paragraph">You can find us:</p>
+        <p class="static-pages__paragraph">{{'You can find us' | translate}}:</p>
         <div class="contacts__info-wrap">
           <div class="contacts__country-wrap">
             <div class="contacts__country">
-              <h6 class="subtitle">China</h6>
+              <h6 class="subtitle">{{'China' | translate}}</h6>
               <ul class="static-pages__list">
-                <li>Representative office location:</li>
+                <li>{{'Representative office location:' | translate}}</li>
                 <p class="static-pages__paragraph contacts__row contacts__row--blue">
                   <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -46,9 +46,9 @@
               </ul>
             </div>
             <div class="contacts__country">
-              <h6 class="subtitle">Switzerland</h6>
+              <h6 class="subtitle">{{'Switzerland' | translate}}</h6>
               <ul class="static-pages__list">
-                <li>Headquarters:</li>
+                <li>{{'Headquarters:' | translate}}</li>
                 <p class="static-pages__paragraph contacts__row contacts__row--blue">
                   <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -80,9 +80,9 @@
             </div>
           </div>
           <div class="contacts__contacts-wrap">
-            <h6 class="subtitle">Contacts</h6>
+            <h6 class="subtitle">{{'Contacts' | translate}}</h6>
             <ul class="static-pages__list">
-              <li>Listing Manager</li>
+              <li>{{'Listing Manager' | translate}}</li>
               <p class="static-pages__paragraph contacts__row contacts__row--blue">
                 <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -96,7 +96,7 @@
                 </svg>
                 <span><a href="mailto:listing@exrates.me">listing@exrates.me</a></span>
               </p>
-              <li>Sales Specialist</li>
+              <li>{{'Sales Specialist' | translate}}</li>
               <p class="static-pages__paragraph contacts__row contacts__row--blue">
                 <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -110,7 +110,7 @@
                 </svg>
                 <span><a href="mailto:listmycoin@Exrates.me">ListmyCoin@Exrates.me</a></span>
               </p>
-              <li>Sales Specialist</li>
+              <li>{{'Sales Specialist' | translate}}</li>
               <p class="static-pages__paragraph contacts__row contacts__row--blue">
                 <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -129,17 +129,17 @@
         </div>
       </div>
       <div class="contacts__form">
-        <p class="static-pages__paragraph">Send form & Exrates team will contact you next 8 hours.</p>
+        <p class="static-pages__paragraph">{{'Send form & Exrates team will contact you next 8 hours' | translate}}.</p>
         <form action="#">
           <div class="wrap-input wrap-input--grey contacts__wrap-input">
             <input class="wrap-input__input" type="text"
                    required
             >
-            <label class="wrap-input__label">Name</label>
+            <label class="wrap-input__label">{{'Name' | translate}}</label>
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              This field is required.
+              {{'This field is required' | translate}}.
             </span>
             <!--Input error section ends-->
           </div>
@@ -147,11 +147,11 @@
             <input class="wrap-input__input" type="text"
                    required
             >
-            <label class="wrap-input__label">Email</label>
+            <label class="wrap-input__label">{{'Email' | translate}}</label>
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              This field is required.
+              {{'This field is required' | translate}}.
             </span>
             <!--Input error section ends-->
           </div>
@@ -159,26 +159,26 @@
             <input class="wrap-input__input" type="text"
                    required
             >
-            <label class="wrap-input__label">Telegram</label>
+            <label class="wrap-input__label">{{'Telegram' | translate}}</label>
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <span class="wrap-input__message" style="display: none;">
-              This field is required.
+              {{'This field is required' | translate}}.
             </span>
             <!--Input error section ends-->
           </div>
           <div class="wrap-textarea wrap-textarea--grey contacts__wrap-textarea">
             <textarea class="wrap-textarea__textarea" required></textarea>
-            <label class="wrap-textarea__label">Text</label>
+            <label class="wrap-textarea__label">{{'Text' | translate}}</label>
             <div class="wrap-textarea__line"></div>
             <!--Input error section starts-->
             <span class="wrap-textarea__message" style="display: none;">
-              This field is required.
+              {{'This field is required' | translate}}.
             </span>
             <!--Input error section ends-->
           </div>
 
-          <button class="btn contacts__form-btn btn--empty-blue">Submit</button>
+          <button class="btn contacts__form-btn btn--empty-blue">{{'Submit' | translate}}</button>
         </form>
       </div>
     </div>
