--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -1,7 +1,7 @@
 
 <div class="overlay">
   <div class="popup popup-login">
-    <h6 class="popup__title">Email confirmed</h6>
+    <h6 class="popup__title">{{'Email confirmed' | translate}}</h6>
     <h4 class="popup__subtitle">{{message}}</h4>
     <form class="popup__form" [formGroup]="passwordForm">
 
@@ -14,7 +14,7 @@
           formControlName="password"
           [ngClass]="{'input--error': !passwordForm.controls['password'].valid && passwordForm.controls['password'].touched}"
         >
-        <label class="wrap-input__label" for="">Password</label>
+        <label class="wrap-input__label" for="">{{'Password' | translate}}</label>
         <div class="wrap-input__line"></div>
         <span
           class="wrap-input__show-password"
@@ -26,18 +26,18 @@
         <div *ngIf="passwordForm.controls['password'].touched && passwordForm.controls['password'].errors != null">
             <span
               *ngIf="passwordForm.get('password').errors['required']"
-              class="wrap-input__message">
+              class="wrap-input__message" translate>
               Password is required.
             </span>
           <span
             *ngIf=" passwordForm.controls['password'].errors['pattern'] || passwordForm.controls['password'].errors['minlength']"
-            class="wrap-input__message">
+            class="wrap-input__message" translate>
               Should have 8 chars at least, symbols and numbers.
             </span>
           <span
             *ngIf=" passwordForm.controls['password'].errors['maxlength']"
             class="wrap-input__message">
-              Password cannot be more than 20 characters long
+              {{'Password cannot be more than 20 characters long' | translate}}
             </span>
         </div>
         <!--Input error section ends-->
@@ -53,7 +53,7 @@
           formControlName="confirmPassword"
           [ngClass]="{'input--error': !passwordForm.controls['confirmPassword'].valid && passwordForm.controls['confirmPassword'].touched}"
         >
-        <label class="wrap-input__label" for="">Repeat password</label>
+        <label class="wrap-input__label" for="">{{'Repeat password' | translate}}</label>
         <div class="wrap-input__line"></div>
         <span
           class="wrap-input__show-password"
@@ -65,12 +65,12 @@
         <div *ngIf="passwordForm.controls['confirmPassword'].touched && passwordForm.controls['confirmPassword'].errors != null">
             <span
               *ngIf="passwordForm.controls['confirmPassword'].errors['required']"
-              class="wrap-input__message">
+              class="wrap-input__message" translate>
               This field is required.
             </span>
           <span *ngIf="passwordForm.controls['password'].value !== passwordForm.controls['confirmPassword'].value
            || passwordForm.controls['confirmPassword'].errors['passwordConfirm']"
-            class="wrap-input__message">
+            class="wrap-input__message" translate>
               Password is not matches.
             </span>
         </div>
@@ -79,7 +79,7 @@
       <button class="btn popup__btn" (click)="createUser()"
               [ngClass]="{'bg-none': !passwordForm.valid,
                'popup__btn--active': passwordForm.valid && passwordForm.controls['password'].value === passwordForm.controls['confirmPassword'].value}"
-      >Update password</button>
+      >{{'Update password' | translate}}</button>
     </form>
   </div>
 </div>
