--- a/src/app/popups/two-factor-popup/sms/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms/sms-step-one/sms-step-one.component.html
@@ -1,6 +1,6 @@
-<div class="title modal__title">Two-Factor authentication by phone number</div>
+<div class="title modal__title" >{{'Two-Factor authentication by phone number' | translate}}</div>
 <div class="subtitle modal__subtitle">
-  <p>Enter the phone number</p>
+  <p>{{'Enter the phone number' | translate}}</p>
 </div>
 <div class="modal__row modal__row--mb32 modal__row--mob-column">
   <div class="select select--fix230 select--country" (click)="openDropdown()">
@@ -8,7 +8,7 @@
       <img [src]="region.iconPath" class="select__list-item-icon">
       {{ region.country }}
     </div>
-    <div class="select__label">Inner transfer</div>
+    <div class="select__label">{{'Inner transfer' | translate}}</div>
     <div class="select__line"></div>
     <div class="select__triangle"></div>
     <ul class="select__list" [ngClass]="{'select__list--open': dropDownOpen }">
@@ -24,18 +24,18 @@
         class="wrap-input__input"
         [ngClass]="{'input--error': !form.get('phone').valid && form.get('phone').touched }"
         type="text" formControlName="phone">
-      <label class="wrap-input__label" for="">Phone number</label>
+      <label class="wrap-input__label" for="">{{'Phone number' | translate}}</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
       <div *ngIf="form.get('phone').touched && form.get('phone').errors != null">
          <span
            *ngIf="form.get('phone').errors['required']"
-           class="wrap-input__message">
+           class="wrap-input__message" translate>
           Please enter the phone number.
         </span>
         <span
           *ngIf="form.get('phone').invalid && !form.get('phone').errors['required']"
-          class="wrap-input__message">
+          class="wrap-input__message" translate>
           Only numbers are allowed.
         </span>
       </div>
@@ -43,5 +43,5 @@
     </div>
   </form>
 </div>
-<button class="btn btn--active btn--center " (click)="onNextStep()" [disabled]="form.invalid">Get verification code</button>
+<button class="btn btn--active btn--center " (click)="onNextStep()" [disabled]="form.invalid">{{'Get verification code' | translate}}</button>
 
