--- a/src/app/popups/two-factor-popup/sms/sms-step-two/sms-step-two.component.html
+++ b/src/app/popups/two-factor-popup/sms/sms-step-two/sms-step-two.component.html
@@ -1,26 +1,25 @@
-<div class="title modal__title">Two-Factor authentication by phone number</div>
+<div class="title modal__title">{{'Two-Factor authentication by phone number' | translate}}</div>
 <div class="subtitle modal__subtitle txt-red">
-  <p>Sorry but you dont have enough USD on your balance to connect two factor authorisation by sms</p>
+  <p>{{'Sorry but you dont have enough USD on your balance to connect two factor authorisation by sms' | translate}}</p>
 </div>
 <div class="modal__row modal__row--mb8">
-  Message price
+  {{'Message price' | translate}}
   <span class="modal__message-price">0.036015 USD</span>
 </div>
 <div class="modal__row txt-red">
-  You have
+  {{'You have' | translate}}
   <span class="modal__you-balance">0.00 USD</span>
 </div>
 <div class="modal__balance-action">
-  <button class="btn btn--center " href="#">Refill balance</button>
-  <span class="modal__or">or</span>
+  <button class="btn btn--center " href="#">{{'Refill balance' | translate}}</button>
+  <span class="modal__or">{{'or' | translate}}</span>
   <button class="btn btn--center " href="#">Exchange BTC to USD</button>
   <span class="modal__exchange-course">1BTC ~ 5400 USD</span>
 </div>
 <div class="note modal__note">
-  <div class="note__title">Please note:</div>
+  <div class="note__title">{{'Please note:' | translate}}</div>
   <ul class="note__list">
-    <li class="note__list-item">To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost
-      of one message for your phone number is <b>0.036015 USD.</b></li>
-    <li class="note__list-item">You should have positive balance in <b>USD </b>on your account</li>
+    <li class="note__list-item" translate>To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost of one message for your phone number is <b>0.036015 USD.</b></li>
+    <li class="note__list-item" translate>You should have positive balance in <b>USD </b>on your account</li>
   </ul>
 </div>
