--- a/src/app/popups/two-factor-popup/telegram/telegram-step-one/telegram-step-one.component.html
+++ b/src/app/popups/two-factor-popup/telegram/telegram-step-one/telegram-step-one.component.html
@@ -1,8 +1,8 @@
-<div class="title modal__title">Two-Factor authentication by telegram</div>
+<div class="title modal__title">{{'Two-Factor authentication by telegram' | translate}}</div>
 <div class="subtitle modal__subtitle">
-  <p>Plug in telegram bot</p>
+  <p>{{'Plug in telegram bot' | translate}}</p>
 </div>
 <div class="subtitle modal__subtitle">
-  <p>To plug in two factor authorisation telegram bot go to <a href="#" class="link">@exrates_bot</a></p>
+  <p translate>To plug in two factor authorisation telegram bot go to <a href="#" class="link">@exrates_bot</a></p>
 </div>
-<button class="btn btn--center" (click)="onNextStep()">Next step</button>
+<button class="btn btn--center" (click)="onNextStep()">{{'Next step' | translate}}</button>
