--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,5 +1,5 @@
 <div class="settings__content">
-  <h3 class="title settings__content-title">Change password</h3>
+  <h3 class="title settings__content-title">{{'Change password' | translate}}</h3>
 
   <!--TODO please style this-->
   <h4> {{ statusMessage }}</h4>
@@ -15,7 +15,7 @@
           formControlName="password_1"
           required
         >
-        <label class="wrap-input__label">Current password</label>
+        <label class="wrap-input__label">{{'Current password' | translate}}</label>
         <div class="wrap-input__line"></div>
         <span
           class="wrap-input__show-password"
@@ -27,12 +27,12 @@
         <span
           *ngIf="form.get('password_1').touched && form.get('password_1').errors != null && form.get('password_1').errors['required']"
           class="wrap-input__message">
-                This field is required.
+                {{'This field is required.' | translate}}
               </span>
         <span
           *ngIf="form.get('password_1').touched && form.get('password_1').errors != null && form.get('password_1').invalid && !form.get('password_1').errors['required']"
           class="wrap-input__message">
-                Password must be between 8 and 20 symbols, contain letters and numbers.
+                {{'Password must be between 8 and 20 symbols, contain letters and numbers.' | translate}}
               </span>
 
         <!--<div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">-->
@@ -50,7 +50,7 @@
 
         <!--Input error section ends-->
       </div>
-      <span class="settings__form-notice">for safety, to confirm that you it is you </span>
+      <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span>
     </div>
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
@@ -62,7 +62,7 @@
           formControlName="password_2"
           required
         >
-        <label class="wrap-input__label">New password</label>
+        <label class="wrap-input__label">{{'New password' | translate}}</label>
         <div class="wrap-input__line"></div>
         <span
           class="wrap-input__show-password"
@@ -74,12 +74,12 @@
         <span
           *ngIf="form.get('password_2').touched && form.get('password_2').errors != null && form.get('password_2').errors['required']"
           class="wrap-input__message">
-                This field is required.
+                {{'This field is required.' | translate}}
               </span>
         <span
           *ngIf="form.get('password_2').touched && form.get('password_2').errors != null && form.get('password_2').invalid && !form.get('password_2').errors['required']"
           class="wrap-input__message">
-                The passwords do not match.
+                {{'The passwords do not match.' | translate}}
               </span>
 
         <!--<div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">-->
@@ -97,10 +97,10 @@
 
         <!--Input error section ends-->
       </div>
-      <span class="settings__form-notice">should have 8 chars at least, symbols and numbers</span>
+      <span class="settings__form-notice">{{'should have 8 chars at least, symbols and numbers' | translate}}</span>
     </div>
     <!---->
-    <button class="btn settings__form-btn">Change password</button>
+    <button class="btn settings__form-btn">{{'Change password' | translate}}</button>
   </form>
 </div>
 <!--<div class="notification-popup change-pass-notif">-->
