--- a/src/app/settings/view/view.component.html
+++ b/src/app/settings/view/view.component.html
@@ -1,5 +1,5 @@
 <div class="settings__content">
-  <h3 class="title settings__content-title">View</h3>
+  <h3 class="title settings__content-title">{{'View' | translate}}</h3>
   <div class="settings__toggler-row">
     <label for="" class="toggler settings__toggler">
       <input type="checkbox"
@@ -8,6 +8,6 @@
              (click)="toggleLowColorMode()">
       <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-text">Inable colors for color-blinds</span>
+    <span class="settings__toggler-text">{{'Inable colors for color-blinds' | translate}}</span>
   </div>
 </div>
